# Onyxcode-FSCU-api

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.opencode/agents/: FSCU-commiter.md  FSCU-phase-implementer.md  FSCU-planner.md  code-fixer.md  code-reviewer.md
.opencode/commands/: code-fix.md  code-review.md  commit-pr.md  implement-phase.md
CONTEXT/: 00-overview.md  01-dominio-y-datos.md  02-api-fastapi.md  03-seguridad-y-anticoncurrencia.md  04-postgres-y-sql.md  05-utm-a-peso-chileno.md  06-docker-y-dokploy.md  07-operacion-y-observabilidad.md  08-checklist.md
PHASES/: 01-base-fastapi-y-configuracion.md  02-dominio-rut-y-endpoint-exacto.md  03-postgres-repositorio-y-consulta-segura.md  04-utm-a-clp-resiliencia-y-cache.md  05-seguridad-rate-limit-y-anticoncurrencia.md  06-observabilidad-docker-y-dokploy.md  07-bootstrap-de-postgres-con-sql-inicial-en-primer-arranque.md  status.md
app/: __init__.py  main.py
app/api/: schemas.py
app/core/: errors.py  logging.py  middleware.py  settings.py
app/db/: postgres.py
app/domain/: rut.py
app/integrations/: utm_client.py
app/observability/: metrics.py
app/repositories/: deudores_repo.py
app/security/: concurrency_guard.py  rate_limit.py
app/services/: money.py  rut_lookup.py  utm_cache.py
docs/: operacion.md
tests/: conftest.py
tests/api/: __init__.py  test_error_contracts.py  test_no_massive_or_partial_search.py  test_rut_endpoint_404_500.py  test_rut_endpoint_utm_failover.py  test_rut_endpoint_validation.py  test_rut_response_schema.py
(+30 files in other folders)
